# aes-benchmarks

./: Cargo.toml  build.rs  readme.md  security.md  summary.md
benches/: aes_benchmark.rs
src/: aes.cpp  aes_bitslice.rs  aes_lut.rs  lib.rs  main.rs  tests.rs  vaes.c
