[package]
name = "aes-benchmarks"
version = "0.1.0"
authors = ["subspace"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
criterion = "0.3.1"

[profile]
[profile.release]
lto = true
opt-level = 3

[[bench]]
name = "aes_benchmark"
harness = false
